--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/biovisualize/dromachine#readme",
   "dependencies": {
     "d3": "^3.5.16",
-    "tone": "^0.6.1"
+    "tone": "^0.6.1",
+    "vue-router": "^4.2.1"
   },
   "devDependencies": {
     "livereload": "^0.4.1"
